--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "^1.8.0",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-schedule": "^2.0.0",
+    "request": "^2.88.2"
   }
 }
